Added Major mmWave Processing Utilities

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ old_code
 data_model_testing
 .vscode/settings.json
 .DS_Store
+env_init.sh
+mmwave_code/__pycache__/cfar_algorithm.cpython-38.pyc
+mmwave_code/__pycache__/mmwave_processor.cpython-38.pyc
